Fixed overflowing copy UI errors
- Put Bootstrap responsive grid system to work and made the tables stackable. They snap to stacked on small screens now, responsive wooshies.
- If the copy of the dns table is overflowing, it'll make the table scrollable instead of overflowing into its neighbours.

--- a/cuckoo/web/src/scss/components/_network-display.scss
+++ b/cuckoo/web/src/scss/components/_network-display.scss
@@ -487,6 +487,7 @@
 	&__table {
 
 		padding: 0;
+		overflow: auto;
 
 		& > table {
 			@extend .cuckoo-table;
