--- a/cuckoo/web/static/css/main.css
+++ b/cuckoo/web/static/css/main.css
@@ -6167,6 +6167,7 @@ body.night .network-display__request-details--single table tr:nth-child(even) .k
 }
 .network-display__table {
   padding: 0;
+  overflow: auto;
 }
 .network-display__table > table {
   background-color: transparent;
